fix: change slider text container alignment

--- a/source/styles/blocks/slide.scss
+++ b/source/styles/blocks/slide.scss
@@ -31,6 +31,7 @@
 
   @include media-desktop {
     grid-column: 3 / 4;
+    align-self: normal;
     align-items: normal;
     padding-top: 150px;
     text-align: left;
